Seperated out stylesheets to avoid unnecessary overlap in styling and loading sheets.
The old stylesheets were a mess and seperating them adds more coherence to what they do and where they go. Index is now site-wide styling, while the rest do what they name implies.

--- a/resources/stylesheets/dashboard.css
+++ b/resources/stylesheets/dashboard.css
@@ -86,5 +86,4 @@
 
 #sales-tot-title {
     font-weight: bold;
-    text-decoration: underline;
 }
